--- a/requirements.txt
+++ b/requirements.txt
@@ -2,6 +2,7 @@ astroid==2.3.1
 atomicwrites==1.3.0
 attrs==19.2.0
 Django==2.2.5
+gunicorn==19.9.0
 importlib-metadata==0.23
 isort==4.3.21
 lazy-object-proxy==1.4.2
