--- a/requirements.txt
+++ b/requirements.txt
@@ -1,24 +1,37 @@
 astroid==2.3.1
 atomicwrites==1.3.0
 attrs==19.2.0
+backcall==0.1.0
+decorator==4.4.0
 Django==2.2.5
 gunicorn==19.9.0
 importlib-metadata==0.23
+ipython==7.8.0
+ipython-genutils==0.2.0
 isort==4.3.21
+jedi==0.15.1
 lazy-object-proxy==1.4.2
 mccabe==0.6.1
 more-itertools==7.2.0
 packaging==19.2
+parso==0.5.1
+pexpect==4.7.0
+pickleshare==0.7.5
+Pillow==6.2.1
 pkg-resources==0.0.0
 pluggy==0.13.0
+prompt-toolkit==2.0.10
 psycopg2==2.8.3
+ptyprocess==0.6.0
 py==1.8.0
+Pygments==2.4.2
 pylint==2.4.2
 pyparsing==2.4.2
 pytest==5.2.0
 pytz==2019.2
 six==1.12.0
 sqlparse==0.3.0
+traitlets==4.3.3
 typed-ast==1.4.0
 wcwidth==0.1.7
 wrapt==1.11.2
