--- a/requirements.txt
+++ b/requirements.txt
@@ -2,14 +2,20 @@ astroid==2.3.1
 atomicwrites==1.3.0
 attrs==19.2.0
 backcall==0.1.0
+boto3==1.10.28
+botocore==1.13.28
 decorator==4.4.0
 Django==2.2.5
+django-storages==1.8
+docutils==0.15.2
 gunicorn==19.9.0
 importlib-metadata==0.23
+ipdb==0.12.2
 ipython==7.8.0
 ipython-genutils==0.2.0
 isort==4.3.21
 jedi==0.15.1
+jmespath==0.9.4
 lazy-object-proxy==1.4.2
 mccabe==0.6.1
 more-itertools==7.2.0
@@ -24,15 +30,19 @@ prompt-toolkit==2.0.10
 psycopg2==2.8.3
 ptyprocess==0.6.0
 py==1.8.0
+pycodestyle==2.5.0
 Pygments==2.4.2
 pylint==2.4.2
 pyparsing==2.4.2
 pytest==5.2.0
+python-dateutil==2.8.0
 pytz==2019.2
+s3transfer==0.2.1
 six==1.12.0
 sqlparse==0.3.0
 traitlets==4.3.3
 typed-ast==1.4.0
+urllib3==1.25.7
 wcwidth==0.1.7
 wrapt==1.11.2
 zipp==0.6.0
