--- a/requirements.txt
+++ b/requirements.txt
@@ -36,6 +36,7 @@ pylint==2.4.2
 pyparsing==2.4.2
 pytest==5.2.0
 python-dateutil==2.8.0
+python-magic==0.4.15
 pytz==2019.2
 s3transfer==0.2.1
 six==1.12.0
